--- a/country_grouping_v2.ipynb
+++ b/country_grouping_v2.ipynb
@@ -70,7 +70,7 @@
     }
    ],
    "source": [
-    "path=\"C:/Users/marco/Dropbox (MPD)/Analytics Argentina/Personal Files/MM/random_downloads/Python/WEO\"\n",
+    "path=\"~/WEO\"\n",
     "os.chdir(path)\n",
     "cwd=os.getcwd()\n",
     "os.listdir(cwd)"
